# agentic-reserve-system

./: .env.example  .gitignore  DEMO_STATUS.md  Dockerfile.railway  RAILWAY_DEPLOYMENT.md  README.md  RUN_DEMO.md  SECURITY_FIXES_APPLIED.md  TASK_COMPLETION_SUMMARY.md  WHITEPAPER.md  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  railway.json  railway.toml
.kiro/hooks/: code-quality-analyzer.kiro.hook
.kiro/llms/: GASP-llms.txt  attack-refference-llms.txt  birdeye-llms.txt  composio-llms.txt  flutter-llms.txt  (+16 more)
.openclaw/: SECURITY_ALERT_CLAWHUB.md  config.json  swarm-config.json
ars-protocol/: .gitignore  Anchor.toml  Cargo.toml  README.md  Trident.toml  package-lock.json  package.json  tsconfig.json
backend/: .env.example  .gitignore  AGENT_ALICE_SIMULATION.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  HEARTBEAT.md  PRODUCTION_BUILD_REPORT.md  PRODUCTION_READINESS.md  PRODUCTION_TEST_RESULTS.md  README.md  SKILL.md  TEST_RESULTS.md  WORK_SUMMARY.md  ars-llms.txt  nodemon.json  package-lock.json  package.json  test-all-apis-comprehensive.js  test-all-real-data.ts  test-apis-simple.js  test-external-apis.js  test-ili-with-sdk.ts  test-jupiter-api.ts  test-jupiter-client.ts  test-jupiter-direct.js  test-jupiter-fix.js  test-kamino-sdk.ts  test-meteora-improved.ts  test-real-apis.ts  tsconfig.build.json
docs/: openclaw-ars-architecture.md
documentation/: PHASE_5_COMPLETION.md  PHASE_6_7_SDK_TESTING_COMPLETION.md  PHASE_6_COMPLETION.md
frontend/: .env.example  README.md  ars-llms.txt  package.json  tailwind.config.js  vite.config.ts
marketplace/: .gitignore  Anchor.toml  Cargo.toml  PROJECT_STRUCTURE.md  README.md  SETUP.md
marketplace/gateway/: .env.example  .gitignore
marketplace/gateway/src/: index.test.ts  index.ts
marketplace/programs/agent-registry/: Cargo.toml
marketplace/programs/agent-registry/src/: lib.rs
marketplace/programs/escrow-manager/: Cargo.toml
marketplace/programs/escrow-manager/src/: lib.rs
marketplace/programs/service-marketplace/: Cargo.toml
marketplace/programs/service-marketplace/src/: lib.rs
marketplace/tests/: agent-registry.test.ts  setup.ts
scripts/: create-project.sh  register-ars-colosseum.ps1  register-ars-colosseum.sh  security-pipeline.sh  update-spec-to-ars.ps1  update-spec-to-ars.sh
sdk/: README.md  package.json
supabase/: FULL_MIGRATION_ALL_001-012.sql  MIGRATION_GUIDE.md  init.sql  kong.yml  reset_database.sql
(+303 files in other folders)
