[package]
name = "agent-registry"
version = "0.1.0"
description = "Agent Registry - On-chain agent identities and reputation tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
solana-program-test = { workspace = true }
