[package]
name = "escrow-manager"
version = "0.1.0"
description = "Escrow Manager - Payment escrow and dispute resolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
solana-program-test = { workspace = true }
